exports[`Suite createSchema should create from a complex nested definition 1`] = `
Object {
  "geo": Object {
    "iterable": true,
    "type": [Function],
    "values": Object {
      "coord": Object {
        "default": 0,
        "iterable": false,
        "type": [Function],
      },
      "country": Object {
        "iterable": true,
        "type": [Function],
        "values": Object {
          "id": Object {
            "default": 0,
            "iterable": false,
            "type": [Function],
          },
        },
      },
      "flag": Object {
        "iterable": true,
        "type": [Function],
        "values": Array [
          Object {
            "default": "",
            "iterable": false,
            "type": [Function],
          },
          Object {
            "default": "",
            "iterable": false,
            "type": [Function],
          },
        ],
      },
    },
  },
}
`;

exports[`Suite createSchema should create from a complex non-nested definition 1`] = `
Object {
  "Default": Object {
    "contacts": Array [],
    "geo": Object {},
    "getName": undefined,
    "name": "",
    "year": 0,
  },
  "PropTypes": Object {
    "contacts": [Function],
    "geo": [Function],
    "getName": [Function],
    "name": [Function],
    "year": [Function],
  },
  "transform": [Function],
}
`;

exports[`Suite createSchema should create from a simple nested definition 1`] = `
Object {
  "contact": Object {
    "iterable": true,
    "type": [Function],
    "values": Array [
      Object {
        "default": 0,
        "iterable": false,
        "type": [Function],
      },
      Object {
        "default": 0,
        "iterable": false,
        "type": [Function],
      },
    ],
  },
  "name": Object {
    "default": "",
    "iterable": false,
    "type": [Function],
  },
}
`;

exports[`Suite createSchema should create from a simple non-nested definition 1`] = `
Object {
  "Default": Object {
    "name": "",
    "year": 0,
  },
  "PropTypes": Object {
    "name": [Function],
    "year": [Function],
  },
  "transform": [Function],
}
`;

exports[`Suite schema should return a new fulfilled object after transform 1`] = `
Object {
  "name": "Ada Lovelace",
  "year": 1815,
}
`;

exports[`Suite schema should return a new fulfilled object with mutators 1`] = `
Object {
  "extra": "attribute",
  "name": "Ada Lovelace",
  "year": 1852,
}
`;

exports[`Suite schema should return the PropTypes 1`] = `
Object {
  "arr": [Function],
  "dispatch": [Function],
  "func": [Function],
  "name": [Function],
  "shape": [Function],
  "value": [Function],
  "year": [Function],
}
`;

exports[`Suite schema should return the default values 1`] = `
Object {
  "arr": Array [
    0,
    "",
  ],
  "dispatch": undefined,
  "func": undefined,
  "name": "",
  "shape": Object {
    "deep": Object {
      "nested": "",
    },
    "id": 0,
    "object": Object {},
  },
  "value": 0,
  "year": 0,
}
`;

exports[`Suite types should allow isRequired extra prop 1`] = `
Object {
  "default": Array [],
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 2`] = `
Object {
  "default": true,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 3`] = `
Object {
  "default": undefined,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 4`] = `
Object {
  "default": 0,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 5`] = `
Object {
  "default": Object {},
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 6`] = `
Object {
  "default": "",
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 7`] = `
Object {
  "default": true,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 8`] = `
Object {
  "default": false,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 9`] = `
Object {
  "default": false,
  "iterable": false,
  "type": undefined,
}
`;

exports[`Suite types should allow isRequired extra prop 10`] = `
Object {
  "default": false,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should allow isRequired extra prop 11`] = `undefined`;

exports[`Suite types should allow isRequired extra prop 12`] = `undefined`;

exports[`Suite types should allow isRequired extra prop 13`] = `undefined`;

exports[`Suite types should allow isRequired extra prop 14`] = `undefined`;

exports[`Suite types should allow isRequired extra prop 15`] = `undefined`;

exports[`Suite types should have exist all the defined types 1`] = `
Object {
  "default": Array [],
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 2`] = `
Object {
  "default": true,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 3`] = `
Object {
  "default": undefined,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 4`] = `
Object {
  "default": 0,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 5`] = `
Object {
  "default": Object {},
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 6`] = `
Object {
  "default": "",
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 7`] = `
Object {
  "default": true,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 8`] = `
Object {
  "default": false,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 9`] = `
Object {
  "default": false,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 10`] = `
Object {
  "default": false,
  "iterable": false,
  "type": [Function],
}
`;

exports[`Suite types should have exist all the defined types 11`] = `[Function]`;

exports[`Suite types should have exist all the defined types 12`] = `[Function]`;

exports[`Suite types should have exist all the defined types 13`] = `[Function]`;

exports[`Suite types should have exist all the defined types 14`] = `[Function]`;

exports[`Suite types should have exist all the defined types 15`] = `[Function]`;
